--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,150 @@
-.App {
-  text-align: center;
+html {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #ffffff;
+  color: rgb(28, 28, 28);
+  font-family: 'Titillium Web', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  padding-bottom: 150px;
+}
+
+.container {
+  max-width: 1707px;
+}
+
+.menu {
+  padding-top: 5px;
+}
+
+.hamburger-menu {
+  width: 34px;
+  height: 19px;
+  background: url('img/Hamburger Menu.png') no-repeat;
+}
+
+.search {
+  width: 80px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.search-glass {
+  width: 20px;
+  height: 21px;
+  background: url('img/Dark Magnifying Glass Outline.png') no-repeat;
+}
+
+.search-text {
+  font-size: 14px;
+  color: rgb(28, 28, 28);
+  line-height: 2.143;
+}
+
+header .social-links {
+  padding-top: 120px;
+}
+
+.social-links {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style: none;
+}
+
+.social-links li:nth-child(n + 2) {
+  padding-left: 40px;
+}
+
+.social-footer,
+.social-header {
+  display: block;
+}
+
+.dribbble-logo {
+  width: 21px;
+  height: 20px;
+  background: url('img/Dribbble Logo.png') no-repeat;
+}
+
+.linkedin-logo {
+  width: 21px;
+  height: 20px;
+  background: url('img/Linkedin Logo.png') no-repeat;
+}
+
+.instagram-logo {
+  width: 21px;
+  height: 20px;
+  background: url('img/Instagram.png') no-repeat;
+}
+
+.twitter-logo {
+  width: 24px;
+  height: 20px;
+  background: url('img/Social Twitter Bird Symbol.png') no-repeat;
+}
+
+.header-content {
+  padding-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header-content h1 {
+  margin: 0;
+  font-size: 40px;
+  text-transform: uppercase;
+  line-height: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-content p {
+  padding-top: 40px;
+  margin: 0;
+  font-size: 15px;
+  font-family: 'Georgia';
+  color: rgb(143, 143, 143);
+  font-style: italic;
+  line-height: 1.2em;
+}
+
+.main-content {
+  padding: 0;
+}
+
+.post {
+  height: 640px;
+}
+
+.post-card {
+  background-color: #f5f5f5;
+  box-sizing: border-box;
+  height: 588px;
+  overflow: hidden;
+}
+
+.post-card_img {
+  height: 100%;
+}
+
+.share-block {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.share {
+  display: block;
 }
