--- a/src/App.css
+++ b/src/App.css
@@ -139,12 +139,80 @@ header .social-links {
   height: 100%;
 }
 
+.post hr {
+    margin-top: 1.2em;
+}
+
+.post-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+    align-items: baseline;
+}
+
+.post-info span {
+    padding-left: 15px;
+}
+
+.post-info {
+    font-size: 20px;
+    font-family: 'Myriad Pro', sans-serif;
+}
+
 .share-block {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
+.share-block_list {
+  padding: 0;
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
 .share {
   display: block;
+}
+
+.share-block_list li:nth-child(n + 2) {
+  padding-left: 15px;
+}
+
+.share-block_list .mail {
+  width: 28px;
+  height: 20px;
+  background: url('img/Close Envelope.png') no-repeat;
+}
+
+.share-block_list .facebook {
+  width: 10px;
+  height: 20px;
+  background: url('img/Facebook.png') no-repeat;
+}
+
+.share-block_list .twitter {
+  width: 24px;
+  height: 20px;
+  background: url('img/Social Twitter Bird Symbol copy.png') no-repeat;
+}
+
+.loadMorePosts {
+  display: flex;
+  justify-content: center;
+}
+
+.loadMorePosts button {
+  border: unset;
+  background: none;
+  outline: none;
+}
+
+.loadMorePosts p {
+  margin: 0;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-family: 'Myriad Pro', sans-serif;
 }
