--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,9 @@ body {
 
 header {
   padding-bottom: 150px;
+  .social-links {
+    padding-top: 120px;
+  }
 }
 
 .container {
@@ -48,10 +51,6 @@ header {
   font-size: 14px;
   color: rgb(28, 28, 28);
   line-height: 2.143;
-}
-
-header .social-links {
-  padding-top: 120px;
 }
 
 .social-links {
@@ -103,21 +102,25 @@ header .social-links {
   align-items: center;
 }
 
-.header-content h1 {
-  margin: 0;
-  font-size: 40px;
-  text-transform: uppercase;
-  line-height: 1em;
+.header-content {
+  h1 {
+    margin: 0;
+    font-size: 40px;
+    text-transform: uppercase;
+    line-height: 1em;
+  }
 }
 
-.header-content p {
-  padding-top: 40px;
-  margin: 0;
-  font-size: 15px;
-  font-family: 'Georgia';
-  color: rgb(143, 143, 143);
-  font-style: italic;
-  line-height: 1.2em;
+.header-content {
+  p {
+    padding-top: 40px;
+    margin: 0;
+    font-size: 15px;
+    font-family: 'Georgia', sans-serif;
+    color: rgb(143, 143, 143);
+    font-style: italic;
+    line-height: 1.2em;
+  }
 }
 
 .main-content {
@@ -126,6 +129,9 @@ header .social-links {
 
 .post {
   height: 640px;
+  hr {
+    margin-top: 1.2em;
+  }
 }
 
 .post-card {
@@ -139,24 +145,22 @@ header .social-links {
   height: 100%;
 }
 
-.post hr {
-    margin-top: 1.2em;
-}
-
 .post-footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-    align-items: baseline;
-}
-
-.post-info span {
-    padding-left: 15px;
+  align-items: baseline;
 }
 
 .post-info {
-    font-size: 20px;
-    font-family: 'Myriad Pro', sans-serif;
+  span {
+    padding-left: 15px;
+  }
+}
+
+.post-info {
+  font-size: 20px;
+  font-family: 'Myriad Pro', sans-serif;
 }
 
 .share-block {
@@ -181,38 +185,36 @@ header .social-links {
   padding-left: 15px;
 }
 
-.share-block_list .mail {
-  width: 28px;
-  height: 20px;
-  background: url('img/Close Envelope.png') no-repeat;
-}
-
-.share-block_list .facebook {
-  width: 10px;
-  height: 20px;
-  background: url('img/Facebook.png') no-repeat;
-}
-
-.share-block_list .twitter {
-  width: 24px;
-  height: 20px;
-  background: url('img/Social Twitter Bird Symbol copy.png') no-repeat;
+.share-block_list {
+  .mail {
+    width: 28px;
+    height: 20px;
+    background: url('img/Close Envelope.png') no-repeat;
+  }
+  .facebook {
+    width: 10px;
+    height: 20px;
+    background: url('img/Facebook.png') no-repeat;
+  }
+  .twitter {
+    width: 24px;
+    height: 20px;
+    background: url('img/Social Twitter Bird Symbol copy.png') no-repeat;
+  }
 }
 
 .loadMorePosts {
   display: flex;
   justify-content: center;
-}
-
-.loadMorePosts button {
-  border: unset;
-  background: none;
-  outline: none;
-}
-
-.loadMorePosts p {
-  margin: 0;
-  font-size: 18px;
-  text-transform: uppercase;
-  font-family: 'Myriad Pro', sans-serif;
+  button {
+    border: unset;
+    background: none;
+    outline: none;
+  }
+  p {
+    margin: 0;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-family: 'Myriad Pro', sans-serif;
+  }
 }
