--- a/src/App.scss
+++ b/src/App.scss
@@ -135,14 +135,67 @@ header {
 }
 
 .post-card {
-  background-color: #f5f5f5;
+  display: flex;
   box-sizing: border-box;
+  text-decoration: none;
   height: 588px;
   overflow: hidden;
+  position: relative;
+
+  &:hover {
+    text-decoration: none;
+  }
+  &:after,
+  &:before {
+    position: absolute;
+    opacity: 0;
+    transition: all 0.7s;
+    -webkit-transition: all 0.7s;
+  }
+  &:after {
+    content: '\A';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #25f1b0;
+  }
+  :before {
+    content: '#design #inspirations
+    View Gallery';
+    width: 100%;
+    color: #fff;
+    z-index: 1;
+    bottom: 0;
+    text-align: center;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+  }
+  &:hover:after,
+  &:hover:before {
+    opacity: 0.6;
+  }
 }
 
 .post-card_img {
   height: 100%;
+  vertical-align: top;
+}
+
+.post-card_description {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.post-card_description_hashtag {
+  color: #15d698;
+  font-size: 18.66px;
+}
+
+.post-card_description_description {
+  color: #1c1c1c;
+  font-size: 32px;
 }
 
 .post-footer {
@@ -152,15 +205,16 @@ header {
   align-items: baseline;
 }
 
-.post-info {
+.post-footer_info {
+  font-size: 20px;
+  font-family: 'Myriad Pro', sans-serif;
+  color: #818181;
   span {
     padding-left: 15px;
   }
-}
-
-.post-info {
-  font-size: 20px;
-  font-family: 'Myriad Pro', sans-serif;
+  .post-comment {
+    color: #16d598;
+  }
 }
 
 .share-block {
@@ -208,8 +262,10 @@ header {
   justify-content: center;
   button {
     border: unset;
-    background: none;
+    background: transparent;
     outline: none;
+    font: inherit;
+    color: inherit;
   }
   p {
     margin: 0;
