--- a/src/App.scss
+++ b/src/App.scss
@@ -145,35 +145,38 @@ header {
   &:hover {
     text-decoration: none;
   }
-  &:after,
-  &:before {
-    position: absolute;
-    opacity: 0;
-    transition: all 0.7s;
-    -webkit-transition: all 0.7s;
+}
+
+.overlay {
+  position: absolute;
+  opacity: 0;
+  transition: all 0.7s;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #25f1b0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  &:hover {
+    opacity: .8;
   }
-  &:after {
-    content: '\A';
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: #25f1b0;
+
+  .hashtag {
+    opacity: 1;
+    font-family: 'Myriad Pro', sans-serif;
+    font-size: 18.66px;
+    color: #ffffff;
   }
-  :before {
-    content: '#design #inspirations
-    View Gallery';
-    width: 100%;
-    color: #fff;
-    z-index: 1;
-    bottom: 0;
-    text-align: center;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-  }
-  &:hover:after,
-  &:hover:before {
-    opacity: 0.6;
+
+  .viewGallery {
+    opacity: 1;
+    font-family: 'Myriad Pro', sans-serif;
+    font-size: 32px;
+    color: #ffffff;
   }
 }
 
@@ -233,6 +236,10 @@ header {
 
 .share {
   display: block;
+
+  &:hover {
+    filter: brightness(0) saturate(100%) invert(60%) sepia(89%) saturate(394%) hue-rotate(109deg) brightness(93%) contrast(96%);;
+  }
 }
 
 .share-block_list li:nth-child(n + 2) {
