--- a/src/App.scss
+++ b/src/App.scss
@@ -101,20 +101,18 @@ main {
 }
 
 .header-content {
-  padding-top: 40px;
+  padding-top: 45px;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
 
-.header-content {
   h1 {
     margin: 0;
     font-size: 47.99px;
     font-family: 'Myriad Pro', sans-serif;
     color: #1c1c1c;
     text-transform: uppercase;
-    line-height: 0.417;
+    line-height: 1em;
     letter-spacing: 13px;
   }
   p {
