--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,8 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #ffffff;
+  background: url("img/Constellation left.png") no-repeat 0 195px,
+  #ffffff url("img/Constellation right.png") no-repeat right 0 top 45px;
   color: rgb(28, 28, 28);
   font-family: 'Titillium Web', sans-serif;
   font-family: 'Ubuntu', sans-serif;
@@ -28,6 +29,8 @@ main {
 
 .pagge-wrapper {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
@@ -480,23 +483,57 @@ footer {
   display: none;
   position: absolute;
   opacity: 0;
-  transition: all 0.7s;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   background: #ffffff;
+  transition: all 2s;
 }
 
 .search-modal {
+  width: 1200px;
   display: none;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: baseline;
   position: absolute;
   top: 300px;
-  left: 360px
+  left: 360px;
+  border-bottom: 1px solid #000000;
+  line-height: 1em;
+  transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-out;
 }
 
 .search-modal_input_glass {
+  margin-left: 20px;
+  display: block;
   width: 34px;
   height: 34px;
-  background: url("img/Dark Magnifying Glass Outline copy.png") no-repeat;
+  background: url('img/Dark Magnifying Glass Outline copy.png') no-repeat;
+}
+
+.search-modal_input {
+  margin-left: 20px;
+  display: block;
+  border: none;
+  outline: none;
+  text-decoration: none;
+  color: #1c1c1c;
+  font-family: 'Myriad Pro', sans-serif;
+  font-size: 47.99px;
+}
+
+.search-modal_button {
+  margin-left: auto;
+  width: 28px;
+  height: 22px;
+  border: none;
+  background: url('./img/Return Refresh.png') no-repeat;
+  outline: none;
+
+  &:focus {
+    outline: none;
+  }
 }
